Fri Apr  4 20:45:16 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (RolloutGeneral): SanityCheck only works for 
	standard backgammon.

Fri Apr  4 20:21:45 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportSnowieTxt): do not strip white space
	(reported by Michael Depreli)

Thu Apr  3 22:30:00 2003  Joern Thyssen  <jth@gnubg.org>

	* makehyper.c: new file
	* Makefile.am: updated with the program.

Thu Apr  3 22:06:56 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (OptionsPages): move dice manipulation options to the
	dice page.

Thu Apr  3 22:01:00 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (EvaluatePositionCubeful4): use money game cube efficiency
	for match play for bearoffs.

Thu Apr  3 21:56:42 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c: reverse the order in which pip counts are reported.
	(suggested by Michael Depreli)

Wed Apr  2 22:46:49 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (BasicCubefulRollout): fix bug in calculating
	cubeful equity when doing exact bearoff truncation for money
	game rollouts.

Tue Apr  1 18:16:03 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (OptionsSet): missing initialisation of the 
	cheat-roll menues.
	(reported by Nardy Pillards)

Mon Mar 31 21:50:51 2003  Joern Thyssen  <jth@gnubg.org>

	Restore "export position gammonline ..." to the previous
	version, but write new "export position gol2clipboard" for
	inserting html on clipboard.

	* html.c (ExportPositionGammOnLine, 
	CommandExportPositionGOL2Clipboard): new functions.
	* gtkgame.c: menu entries for new function.
	* html.c (CommandExportPositionGammOnLine): use new function.

Mon Mar 31 21:10:14 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (MoveListEvalSettings, MoveListRolloutSettings):
	bring dialog to the front (only GTK+ 2.0).
	* gtkcube.c (CubeAnalysisEvalSettings, CubeAnlysisRolloutSettings):
	bring dialog to the front (only GTK+ 2.0).

Sun Mar 30 20:45:00 2003  Joern Thyssen  <jth@gnubg.org>
